# yolo-pose_cpp

./: .gitignore  CMakeLists.txt  DrawUtils.cpp  DrawUtils.hpp  FrameStreamer.cpp  FrameStreamer.hpp  Logger.hpp  PoseEstimator.cpp  PoseEstimator.hpp  README.md  main.cpp  streamer.drawio
docs/: streamer.drawio
tests/: CMakeLists.txt  test_main.cpp
